@@ -1,0 +1,7 @@
+aspect LibraryCompilationUnits {
+	public Map<String, CompilationUnit>
+		Program.getLibCompilationUnitValueMap() {
+
+		return getLibCompilationUnit_String_values;
+	}
+}
