@@ -45,7 +45,8 @@
 			beaver="true"
 			noVisitCheck="true"
 			noCacheCycle="true"
-			outdir="${gen.dir}">
+			outdir="${gen.dir}"
+			defaultMap="new org.jastadd.util.RobustMap(new java.util.HashMap())">
 			<fileset dir="${java4.dir}/grammar">
 				<include name="*.ast"/>
 				<exclude name="CatchClause.ast"/>
@@ -112,7 +113,8 @@
 			beaver="true"
 			noVisitCheck="true"
 			noCacheCycle="true"
-			outdir="${gen.dir}">
+			outdir="${gen.dir}"
+			defaultMap="new org.jastadd.util.RobustMap(new java.util.HashMap())">
 			<fileset dir="${java4.dir}/grammar">
 				<include name="*.ast"/>
 				<exclude name="CatchClause.ast"/>
