@@ -1,3 +1,8 @@
+2013-08-29  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+
+    * JastAddJ now generates classfiles for imported types that are imported
+    from source
+
 2013-08-12  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Removed BranchPropagation interface
